kube/lab-survey-front.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab-survey-front
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: lab-survey-front
  template:
    metadata:
      labels:
        app: lab-survey-front
    spec:
      containers:
      - name: lab-survey-front
        image: riges/lab-survey-front
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: lab-survey-front
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: lab-survey-front
