kube/lab-survey-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: lab-survey
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /api
        backend:
          serviceName: lab-survey-api
          servicePort: 80
      - path: /
        backend:
          serviceName: lab-survey-front
          servicePort: 80
